# chess

./: CMakeLists.txt  README.md
includes/: connection.h  constants.h  converter.h  globals.h  helpers.h  inputValidation.h  intialize.h  movement.h  movementHelpers.h  pawnValidator.h
src/: constants.c  globals.c  helpers.c  helpers.h  initialize.c  main.c
src/connection/: connection.c
src/input/: converter.c  inputValidation.c  pawnValidator.c
src/movement/: converter.c  movement.c  movementHelpers.c
